k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: covid-19
  name: covid-19
spec:
  replicas: 1
  selector:
    matchLabels:
      run: covid-19
  template:
    metadata:
      labels:
        run: covid-19
    spec:
      containers:
      - image: registry.gitlab.com/humayun-rashid/covid-19
        name: covid-19
        ports:
        - containerPort: 3000
