k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: covid-19
  name: covid-19
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: covid-19
  type: ClusterIP
